assets/css/style.css
/*google font*/
@import url('https://fonts.googleapis.com/css?family=Poppins:400,700,800,900&display=swap');

body{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: 'Poppins',sans-serif;
    background-color: #d9d9d9;
    margin-top: 80px;
}

.navbar{
	position: fixed;
	top: 0;
	z-index: 99999;
	padding: 21px;
    background-color: rgba(255, 255, 255, 0.87) !important;   
}
.navbar .logo{
    
    margin-left: 5%;
}
.navbar ul.nav{
	
    margin-right: 4%;
}
.navbar ul.nav li.active,
.navbar ul.nav li:hover{
	background:rgba(255, 255, 255, 0.5);
	color: #000;

}
.navbar ul.nav li a{
	color: rgb(136, 123, 123);
	font-size: 1em;
	font-weight: 500;
}
.navbar ul.nav li.active a,
.navbar ul.nav li:hover a{
	color: #000;
}
/* section*/

#portfolio {
    padding-bottom: 50px;
}

#portfolio.info-box .portfolio-filter a.active {
    color: rgb(136, 123, 123);
    background-color: transparent;
    border: 2px solid rgb(136, 123, 123);
}

.portfolio-filter a {
    color: #666666;
    font-size: 20px;
    font-weight: 1em;
    letter-spacing: 0.1em;
    line-height: 40px;
    border: 2px solid transparent;
    margin: 0 5px;
    padding: 10px 8px;
}

body {
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
    letter-spacing: 0.05em;
}

.portfolio-filter {
    margin-top: 40px;
    margin-bottom: 40px;
}
.text-center {
    text-align: center;
}

.list-inline {
    padding-left: 0;
    margin-left: -5px;
    list-style: none;
}

ul {
    padding: 0;

}

/*hover*/




/*footer*/

footer{
background-color: #d9d9d9;
min-height: 80px;
font-size: 12px;
font-weight: 400;
margin-bottom: 0;
color: rgb(136, 123, 123);
}

.pull-right a {

 color: rgb(136, 123, 123);    
 width: 32px;
 height: 32px;
 padding: 3px;
    
}

/* Contact Form*/

textarea {
	resize: none;
}
.form-label {
	font-size: 12px;
	color: rgb(136, 123, 123);
	margin: 0;
	display: block;
	opacity: 1;
	-webkit-transition: .333s ease top, .333s ease opacity;
	transition: .333s ease top, .333s ease opacity;
}
.form-control {
	border-radius: 0;
	border-color: #ccc;
   	border-width: 0 0 2px 0;
   	border-style: none none solid none;
   	box-shadow: none;
}
.form-control:focus {
	box-shadow: none;
	border-color: rgb(136, 123, 123);
}
.js-hide-label {
	opacity: 0; 	
}
.js-unhighlight-label {
	color: #999 
}
.btn-start-order {
	background: 0 0 #ffffff;
    border: 1px solid #2f323a;
    border-radius: 3px;
    color: #2f323a;
    font-family: "Raleway", sans-serif;
    font-size: 16px;
    line-height: inherit;
    margin: 30px 0;
    padding: 10px 50px;
    text-transform: uppercase;
    transition: all 0.25s ease 0s;
}
.btn-start-order:hover,.btn-start-order:active, .btn-start-order:focus {
	border-color: rgb(136, 123, 123);
	color: rgb(136, 123, 123);
}

